--- a/assets/sass/protocol/includes/fonts/_inter.scss
+++ b/assets/sass/protocol/includes/fonts/_inter.scss
@@ -1,3 +1,5 @@
+@use "../../../../../theme/assets/sass/theme";
+
 // This Source Code Form is subject to the terms of the Mozilla Public
 // License, v. 2.0. If a copy of the MPL was not distributed with this
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
@@ -8,8 +10,8 @@
     font-family: Inter;
     font-style: normal;
     font-weight: normal;
-    src: url('#{$font-path}/Inter-Regular.woff2') format('woff2'),
-         url('#{$font-path}/Inter-Regular.woff') format('woff');
+    src: url('#{theme.$font-path}/Inter-Regular.woff2') format('woff2'),
+         url('#{theme.$font-path}/Inter-Regular.woff') format('woff');
 }
 
 @font-face {
@@ -17,8 +19,8 @@
     font-family: Inter;
     font-style: normal;
     font-weight: bold;
-    src: url('#{$font-path}/Inter-Bold.woff2') format('woff2'),
-         url('#{$font-path}/Inter-Bold.woff') format('woff');
+    src: url('#{theme.$font-path}/Inter-Bold.woff2') format('woff2'),
+         url('#{theme.$font-path}/Inter-Bold.woff') format('woff');
 }
 
 @font-face {
@@ -26,8 +28,8 @@
     font-family: Inter;
     font-style: italic;
     font-weight: normal;
-    src: url('#{$font-path}/Inter-Italic.woff2') format('woff2'),
-         url('#{$font-path}/Inter-Italic.woff') format('woff');
+    src: url('#{theme.$font-path}/Inter-Italic.woff2') format('woff2'),
+         url('#{theme.$font-path}/Inter-Italic.woff') format('woff');
 }
 
 @font-face {
@@ -35,6 +37,6 @@
     font-family: Inter;
     font-style: italic;
     font-weight: bold;
-    src: url('#{$font-path}/Inter-BoldItalic.woff2') format('woff2'),
-         url('#{$font-path}/Inter-BoldItalic.woff') format('woff');
+    src: url('#{theme.$font-path}/Inter-BoldItalic.woff2') format('woff2'),
+         url('#{theme.$font-path}/Inter-BoldItalic.woff') format('woff');
 }
