--- a/assets/sass/protocol/includes/mixins/_grid.scss
+++ b/assets/sass/protocol/includes/mixins/_grid.scss
@@ -1,3 +1,6 @@
+@use "../../../../../node_modules/@mozilla-protocol/tokens/dist";
+@use "../mixins";
+
 // This Source Code Form is subject to the terms of the Mozilla Public
 // License, v. 2.0. If a copy of the MPL was not distributed with this
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
@@ -5,14 +8,14 @@
 
 // Grid columns
 $column-width:  8.333%; // 100% / 12 columns
-$gutter-width:  $layout-sm;
+$gutter-width:  dist.$layout-sm;
 
 
 // Column spans for standard column widths
 // Usage:
 //  .foo { @include colspan(4); }
 @mixin colspan($columns) {
-    @include border-box;
+    @include mixins.border-box;
     width: $column-width * $columns;
     padding-left: $gutter-width * 0.5;
     padding-right: $gutter-width * 0.5;
@@ -24,26 +27,26 @@ $gutter-width:  $layout-sm;
 }
 
 @mixin grid-quarter {
-    @include border-box;
+    @include mixins.border-box;
     width: 25%;
 }
 
 @mixin grid-third {
-    @include border-box;
+    @include mixins.border-box;
     width: 33.333%;
 }
 
 @mixin grid-half {
-    @include border-box;
+    @include mixins.border-box;
     width: 50%;
 }
 
 @mixin grid-two-thirds {
-    @include border-box;
+    @include mixins.border-box;
     width: 66.666%;
 }
 
 @mixin grid-three-quarters {
-    @include border-box;
+    @include mixins.border-box;
     width: 75%;
 }
