--- a/theme/assets/sass/components/_browser.scss
+++ b/theme/assets/sass/components/_browser.scss
@@ -1,3 +1,5 @@
+@use "../../../../node_modules/@mozilla-protocol/tokens/dist";
+
 .Browser-tabs {
   background-color: white;
   border-bottom: 1px solid rgba(70,81,94,0.25);
@@ -23,7 +25,7 @@
 .Browser-panel .Prose {
   code:not([class*="hljs"]) {
     background-color: #f8f8f8;
-    border-radius: $border-radius-xs;
+    border-radius: dist.$border-radius-xs;
     color: #000080;
     outline: 1px solid rgba(0, 0, 0, .05);
     padding: 0 .5ch;
