--- a/theme/assets/sass/components/_document.scss
+++ b/theme/assets/sass/components/_document.scss
@@ -1,5 +1,8 @@
+@use "../../../../assets/sass/protocol/includes/functions";
+@use "../../../../assets/sass/protocol/includes/mixins/typography";
+
 .Document-title {
-    @include text-title-lg;
-    font-family: get-theme('title-font-family');
-    color: get-theme('title-text-color');
+    @include typography.text-title-lg;
+    font-family: functions.get-theme('title-font-family');
+    color: functions.get-theme('title-text-color');
 }
