--- a/theme/assets/sass/components/_header.scss
+++ b/theme/assets/sass/components/_header.scss
@@ -1,5 +1,8 @@
+@use "../../../../assets/sass/protocol/includes/functions";
+@use "../../../../node_modules/@mozilla-protocol/tokens/dist";
+
 .Header {
-  background-color: get-theme('background-color-inverse');
+  background-color: functions.get-theme('background-color-inverse');
 }
 
 .Header-button {
@@ -9,7 +12,7 @@
 
 .Header-title {
   font-size: 1.6rem;
-  font-family: $font-stack-mozilla;
+  font-family: dist.$font-stack-mozilla;
   font-weight: bold;
   padding-top: 0;
   padding-bottom: 0;
