--- a/theme/assets/sass/components/_pen.scss
+++ b/theme/assets/sass/components/_pen.scss
@@ -1,11 +1,16 @@
+@use "../../../../assets/sass/protocol/includes/functions";
+@use "../../../../assets/sass/protocol/includes/mixins/bidi";
+@use "../../../../assets/sass/protocol/includes/mixins/typography";
+@use "../../../../node_modules/@mozilla-protocol/tokens/dist";
+
 .Pen {
-    background-color: $color-marketing-gray-10;
+    background-color: dist.$color-marketing-gray-10;
 }
 
 .Pen-title {
-    @include text-title-xs;
-    font-family: get-theme('title-font-family');
-    color: get-theme('title-text-color');
+    @include typography.text-title-xs;
+    font-family: functions.get-theme('title-font-family');
+    color: functions.get-theme('title-text-color');
 }
 
 .Pen-previewLink {
@@ -13,7 +18,7 @@
     &:visited,
     &:hover,
     &:active {
-        color: get-theme('title-text-color');
+        color: functions.get-theme('title-text-color');
     }
 
     svg {
@@ -23,15 +28,15 @@
 }
 
 .Pen-previewButton {
-    @include bidi(((margin-left, $spacing-lg, margin-right, $spacing-lg),));
-    @include text-body-sm;
-    color: get-theme('link-color');
-    font-family: get-theme('body-font-family');
+    @include bidi.bidi(((margin-left, dist.$spacing-lg, margin-right, dist.$spacing-lg),));
+    @include typography.text-body-sm;
+    color: functions.get-theme('link-color');
+    font-family: functions.get-theme('body-font-family');
     font-weight: bold;
 
     &:hover,
     &:active {
-        color: get-theme('link-color-hover');
+        color: functions.get-theme('link-color-hover');
     }
 }
 
@@ -42,11 +47,11 @@
 }
 
 .Pen-bidi-controls {
-    padding: 0 $spacing-md;
+    padding: 0 dist.$spacing-md;
 
     label {
         display: inline-block;
-        padding: 0 $spacing-xs;
+        padding: 0 dist.$spacing-xs;
     }
 
     abbr {
