--- a/theme/assets/sass/components/_preview.scss
+++ b/theme/assets/sass/components/_preview.scss
@@ -1,8 +1,10 @@
+@use "../../../../node_modules/@mozilla-protocol/tokens/dist";
+
 .Preview {
   background-color: transparent;
 }
 
 .Preview-iframe,
 .Preview-resizer {
-  background-color: $color-light-gray-20;
+  background-color: dist.$color-light-gray-20;
 }
