--- a/theme/assets/sass/components/_prose.scss
+++ b/theme/assets/sass/components/_prose.scss
@@ -1,3 +1,7 @@
+@use "../../../../assets/sass/protocol/includes/functions";
+@use "../../../../assets/sass/protocol/includes/mixins/typography";
+@use "../../../../node_modules/@mozilla-protocol/tokens/dist";
+
 .Prose {
     width: 100%;
 
@@ -6,13 +10,13 @@
     }
 
     :link {
-        color: get-theme('link-color');
+        color: functions.get-theme('link-color');
         text-decoration: underline;
 
         &:hover,
         &:focus,
         &:active {
-            color: get-theme('link-color-hover');
+            color: functions.get-theme('link-color-hover');
             text-decoration: none;
         }
 
@@ -22,39 +26,39 @@
     }
 
     :visited {
-        color: get-theme('link-color-visited');
+        color: functions.get-theme('link-color-visited');
 
         &:hover,
         &:focus,
         &:active {
-            color: get-theme('link-color-visited-hover');
+            color: functions.get-theme('link-color-visited-hover');
         }
     }
 
     h1, h2, h3, h4, h5, h6 {
-        font-family: get-theme('title-font-family');
-        color: get-theme('title-text-color');
+        font-family: functions.get-theme('title-font-family');
+        color: functions.get-theme('title-text-color');
         font-weight: bold;
         margin: 1em 0 .5em;
         opacity: 1;
     }
 
     h1 {
-        @include text-title-sm;
+        @include typography.text-title-sm;
     }
 
     h2 {
-        @include text-title-xs;
+        @include typography.text-title-xs;
     }
 
     h3 {
-        @include text-title-2xs;
+        @include typography.text-title-2xs;
     }
 
     h4,
     h5,
     h6 {
-        @include text-title-3xs;
+        @include typography.text-title-3xs;
     }
 
     & :not(hr) + h2 {
@@ -63,7 +67,7 @@
 
     code:not([class*="hljs"]) {
         background-color: #f8f8f8;
-        border-radius: $border-radius-xs;
+        border-radius: dist.$border-radius-xs;
         color: #000080;
         outline: 1px solid rgba(0, 0, 0, .05);
         padding: 0 .5ch;
