--- a/theme/assets/sass/components/_tree.scss
+++ b/theme/assets/sass/components/_tree.scss
@@ -1,3 +1,6 @@
+@use "../../../../assets/sass/protocol/includes/mixins/typography";
+@use "../../../../node_modules/@mozilla-protocol/tokens/dist";
+
 .Tree {
   white-space: normal;
 }
@@ -7,13 +10,13 @@
 }
 
 .Tree-title {
-  @include text-body-md;
-  color: $color-white;
+  @include typography.text-body-md;
+  color: dist.$color-white;
   letter-spacing: normal;
 }
 
 .Tree-collectionLabel {
-  color: $color-white;
+  color: dist.$color-white;
   padding-top: .15em;
   padding-bottom: .15em;
 
@@ -23,8 +26,8 @@
   }
 
   &:hover {
-    color: $color-white;
-    background-color: $color-dark-gray-50;
+    color: dist.$color-white;
+    background-color: dist.$color-dark-gray-50;
   }
 
   &::before {
@@ -73,28 +76,28 @@
 }
 
 .Tree-item {
-  @include text-body-sm;
+  @include typography.text-body-sm;
 
   .Tree-entityLink {
-    color: $color-white;
+    color: dist.$color-white;
     padding-top: .25em;
     padding-bottom: .25em;
 
     &:hover {
-      color: $color-white;
-      background-color: $color-dark-gray-50;
+      color: dist.$color-white;
+      background-color: dist.$color-dark-gray-50;
     }
   }
 
   &.is-current {
-    background-color: $color-dark-gray-60;
+    background-color: dist.$color-dark-gray-60;
   }
 }
 
 .Tree-aside {
-  color: $color-white;
+  color: dist.$color-white;
 }
 
 .Tree-collapse {
-  color: $color-white;
+  color: dist.$color-white;
 }
