--- a/theme/assets/sass/settings/_settings.scss
+++ b/theme/assets/sass/settings/_settings.scss
@@ -1,7 +1,9 @@
-$font-family-monospace: 'SFMono-Regular', 'Consolas', 'Liberation Mono', 'Menlo', monospace !default;
-$font-family-sans-serif: $font-stack-base !default;
+@use "../../../../node_modules/@mozilla-protocol/tokens/dist";
 
-$color-link: #66f;
+$font-family-monospace: 'SFMono-Regular', 'Consolas', 'Liberation Mono', 'Menlo', monospace !default;
+$font-family-sans-serif: dist.$font-stack-base !default;
+
+dist.$color-link: #66f;
 $color-text: #000;
 $color-heading: #000;
 
