--- a/assets/sass/protocol/includes/_mixins.scss
+++ b/assets/sass/protocol/includes/_mixins.scss
@@ -12,7 +12,7 @@
 @use 'mixins/zap';
 @use 'mixins/typography';
 @use "../../../../node_modules/@mozilla-protocol/tokens/dist";
-@use "functions";
+@use "themes";
 
 
 // Clear floats
@@ -242,23 +242,23 @@
 // Light color links for dark backgrounds.
 @mixin light-links {
     a:link {
-        color: functions.get-theme('link-color-inverse');
+        color: themes.get-theme('link-color-inverse');
     }
 
     a:visited {
-        color: functions.get-theme('link-color-visited-inverse');
+        color: themes.get-theme('link-color-visited-inverse');
     }
 
     a:hover,
     a:focus,
     a:active {
-        color: functions.get-theme('link-color-hover-inverse');
+        color: themes.get-theme('link-color-hover-inverse');
     }
 
     a:visited:hover,
     a:visited:focus,
     a:visited:active {
-        color: functions.get-theme('link-color-visited-hover-inverse');
+        color: themes.get-theme('link-color-visited-hover-inverse');
     }
 }
 
