--- a/assets/sass/protocol/includes/fonts/_inter.scss
+++ b/assets/sass/protocol/includes/fonts/_inter.scss
@@ -1,4 +1,4 @@
-@use "../../../../../theme/assets/sass/theme";
+@use "../config";
 
 // This Source Code Form is subject to the terms of the Mozilla Public
 // License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -10,8 +10,8 @@
     font-family: Inter;
     font-style: normal;
     font-weight: normal;
-    src: url('#{theme.$font-path}/Inter-Regular.woff2') format('woff2'),
-         url('#{theme.$font-path}/Inter-Regular.woff') format('woff');
+    src: url('#{config.$font-path}/Inter-Regular.woff2') format('woff2'),
+         url('#{config.$font-path}/Inter-Regular.woff') format('woff');
 }
 
 @font-face {
@@ -19,8 +19,8 @@
     font-family: Inter;
     font-style: normal;
     font-weight: bold;
-    src: url('#{theme.$font-path}/Inter-Bold.woff2') format('woff2'),
-         url('#{theme.$font-path}/Inter-Bold.woff') format('woff');
+    src: url('#{config.$font-path}/Inter-Bold.woff2') format('woff2'),
+         url('#{config.$font-path}/Inter-Bold.woff') format('woff');
 }
 
 @font-face {
@@ -28,8 +28,8 @@
     font-family: Inter;
     font-style: italic;
     font-weight: normal;
-    src: url('#{theme.$font-path}/Inter-Italic.woff2') format('woff2'),
-         url('#{theme.$font-path}/Inter-Italic.woff') format('woff');
+    src: url('#{config.$font-path}/Inter-Italic.woff2') format('woff2'),
+         url('#{config.$font-path}/Inter-Italic.woff') format('woff');
 }
 
 @font-face {
@@ -37,6 +37,6 @@
     font-family: Inter;
     font-style: italic;
     font-weight: bold;
-    src: url('#{theme.$font-path}/Inter-BoldItalic.woff2') format('woff2'),
-         url('#{theme.$font-path}/Inter-BoldItalic.woff') format('woff');
+    src: url('#{config.$font-path}/Inter-BoldItalic.woff2') format('woff2'),
+         url('#{config.$font-path}/Inter-BoldItalic.woff') format('woff');
 }
