--- a/theme/assets/sass/components/_document.scss
+++ b/theme/assets/sass/components/_document.scss
@@ -1,8 +1,8 @@
-@use "../../../../assets/sass/protocol/includes/functions";
+@use "../../../../assets/sass/protocol/includes/themes";
 @use "../../../../assets/sass/protocol/includes/mixins/typography";
 
 .Document-title {
     @include typography.text-title-lg;
-    font-family: functions.get-theme('title-font-family');
-    color: functions.get-theme('title-text-color');
+    font-family: themes.get-theme('title-font-family');
+    color: themes.get-theme('title-text-color');
 }
