--- a/assets/sass/protocol/base/elements/_forms.scss
+++ b/assets/sass/protocol/base/elements/_forms.scss
@@ -2,8 +2,8 @@
 // License, v. 2.0. If a copy of the MPL was not distributed with this
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-@import '../../includes/lib';
-@import '../../includes/forms/lib';
+@use '../../includes/lib';
+@use '../../includes/forms';
 
 
 //* -------------------------------------------------------------------------- */
@@ -36,8 +36,8 @@ input,
 select,
 optgroup,
 textarea {
-    @include font-base;
-    @include text-body-md;
+    @include lib.font-base;
+    @include lib.text-body-md;
     line-height: 1.25;
 }
 
@@ -86,27 +86,27 @@ textarea {
 // Element styles
 
 fieldset {
-    margin-bottom: $field-v-spacing;
+    margin-bottom: forms.$field-v-spacing;
     min-width: 0; // https://stackoverflow.com/questions/17408815/fieldset-resizes-wrong-appears-to-have-unremovable-min-width-min-content
     width: 100%;
 }
 
 legend {
     @include text-body-lg;
-    font-family: get-theme('title-font-family');
+    font-family: lib.get-theme('title-font-family');
     font-weight: bold;
-    margin-bottom: $field-v-spacing;
+    margin-bottom: forms.$field-v-spacing;
 }
 
 label {
-    @include field-label();
+    @include forms.field-label();
 }
 
 
 // check boxes and radio buttons
 [type="checkbox"],
 [type="radio"] {
-    border-radius: $field-border-radius;
+    border-radius: forms.$field-border-radius;
 }
 
 [type="radio"] {
@@ -131,45 +131,45 @@ input[type='url'] {
     @include form-input;
 
     &::placeholder {
-        color: $color-marketing-gray-70;
+        color: lib.$color-marketing-gray-70;
     }
 
     &:hover {
-        border-color: $field-border-color-hover;
+        border-color:forms.$field-border-color-hover;
     }
 
     &:focus {
         outline: none;
-        border-color: $color-link;
-        box-shadow: $field-focus-ring;
+        border-color: lib.$color-link;
+        box-shadow: forms.$field-focus-ring;
 
         .mzp-t-dark & {
-            box-shadow: $field-focus-ring-dark;
+            box-shadow: forms.$field-focus-ring-dark;
         }
     }
 
     .mzp-is-error & {
-        border-color: $field-border-color-error;
+        border-color: forms.$field-border-color-error;
         box-shadow: none;
 
         &:hover {
-            border-color: $field-border-color-error-hover;
+            border-color: forms.$field-border-color-error-hover;
         }
 
         &:focus {
-            border-color: $form-red;
-            box-shadow: $field-focus-ring-error;
+            border-color: forms.$form-red;
+            box-shadow: forms.$field-focus-ring-error;
         }
     }
 
     &:disabled,
     &[aria-disabled=true] {
-        background: $color-marketing-gray-10;
-        border-color: $color-marketing-gray-30;
-        color: $color-marketing-gray-70;
+        background: lib.$color-marketing-gray-10;
+        border-color: lib.$color-marketing-gray-30;
+        color: lib.$color-marketing-gray-70;
 
         &:focus {
-            border-color: $color-marketing-gray-80;
+            border-color: lib.$color-marketing-gray-80;
         }
     }
 }
@@ -183,7 +183,7 @@ input[type='search'],
 input[type='tel'],
 input[type='text'],
 input[type='url'] {
-    min-width: $field-min-width;
+    min-width: forms.$field-min-width;
     max-width: 100%;
 }
 
@@ -194,97 +194,97 @@ input[size] {
 
 // size on HTML is not a good way to size things, this is most evident at small sizes
 input[size='2'] {
-    max-width: calc(2.5ch + #{$field-padding * 2});
+    max-width: calc(2.5ch + #{forms.$field-padding * 2});
 }
 
 input[size='3'] {
-    max-width: calc(3.5ch + #{$field-padding * 2});
+    max-width: calc(3.5ch + #{forms.$field-padding * 2});
 }
 
 input[size='4'] {
-    max-width: calc(4.5ch + #{$field-padding * 2});
+    max-width: calc(4.5ch + #{forms.$field-padding * 2});
 }
 
 input[size='5'] {
-    max-width: calc(5.5ch + #{$field-padding * 2});
+    max-width: calc(5.5ch + #{forms.$field-padding * 2});
 }
 
 input[type='search'] {
     background-image: $url-image-search-form;
     background-repeat: no-repeat;
     background-position: left 8px top 50%;
-    padding: $field-padding $field-padding $field-padding calc(1.5em + #{$field-padding * 2});
+    padding: forms.$field-padding forms.$field-padding forms.$field-padding calc(1.5em + #{forms.$field-padding * 2});
 
     &:disabled {
-        background-image: $url-image-search-form;
+        background-image: lib.$url-image-search-form;
         background-repeat: no-repeat;
         background-position: left 8px top 50%;
-        padding: $field-padding $field-padding $field-padding calc(1.5em + #{$field-padding * 2});
+        padding: forms.$field-padding forms.$field-padding forms.$field-padding calc(1.5em + #{forms.$field-padding * 2});
         &:hover {
-            background-image: $url-image-search-form;
+            background-image: lib.$url-image-search-form;
         }
     }
 
     &:hover {
-        background-image: $url-image-search-link-hover;
+        background-image: lib.$url-image-search-link-hover;
     }
 
     &:focus {
-        background-image: $url-image-search-link;
+        background-image: lib.$url-image-search-link;
     }
 
     [dir="rtl"] & {
         background-position: right 8px top 50%;
-        padding: $field-padding calc(1.5em + #{$field-padding * 2}) $field-padding $field-padding;
+        padding: forms.$field-padding calc(1.5em + #{forms.$field-padding * 2}) forms.$field-padding forms.$field-padding;
     }
 }
 
 input[type='color'],
 input[type='file'] {
-    background: $color-white;
-    border-radius: $field-border-radius;
-    border: $field-border;
+    background: lib.$color-white;
+    border-radius: forms.$field-border-radius;
+    border: forms.$field-border;
     line-height: 1.25;
-    margin: 0 0 $field-v-spacing;
+    margin: 0 0 forms.$field-v-spacing;
 
     &:hover {
-        border-color: $field-border-color-hover;
+        border-color: forms.$field-border-color-hover;
     }
 
     &:focus {
-        border-color: $color-link;
-        box-shadow: $field-focus-ring;
+        border-color: lib.$color-link;
+        box-shadow: forms.$field-focus-ring;
         outline: none;
     }
 
     .mzp-is-error & {
-        border-color: $field-border-color-error;
+        border-color: forms.$field-border-color-error;
         box-shadow: none;
 
         &:hover {
-            border-color: $field-border-color-error-hover;
+            border-color: forms.$field-border-color-error-hover;
         }
 
         &:focus {
-            border-color: $form-red;
-            box-shadow: $field-focus-ring-error;
+            border-color: forms.$form-red;
+            box-shadow: forms.$field-focus-ring-error;
         }
     }
 
     &:disabled,
     &[aria-disabled=true] {
-        background: $color-marketing-gray-30;
-        border-color: $color-marketing-gray-30;
-        color: $color-marketing-gray-70;
+        background: lib.$color-marketing-gray-30;
+        border-color: lib.$color-marketing-gray-30;
+        color: lib.$color-marketing-gray-70;
 
         &:focus {
-            border-color: $color-marketing-gray-80;
+            border-color: lib.$color-marketing-gray-80;
         }
     }
 }
 
 input[type='file'] {
-    padding: $field-padding;
+    padding: forms.$field-padding;
 }
 
 textarea {
@@ -301,16 +301,16 @@ select {
     @include border-box;
     @include bidi((
         (background-position, right 8px top 50%, left 8px top 50%),
-        (padding, $field-padding $symbol-spacing $field-padding $field-padding, $field-padding $field-padding $field-padding $symbol-spacing),
+        (padding, forms.$field-padding forms.$symbol-spacing forms.$field-padding forms.$field-padding, forms.$field-padding forms.$field-padding forms.$field-padding forms.$symbol-spacing),
     ));
     @include form-input;
-    background-image: $url-image-arrow-down-form, $select-bg;
+    background-image: lib.$url-image-arrow-down-form, forms.$select-bg;
     background-repeat: no-repeat, repeat;
     background-size: 1.5em auto, 100%;
     display: block;
     font-weight: normal;
     max-width: 100%;
-    min-width: $field-min-width;
+    min-width: lib.$field-min-width;
     text-overflow: ellipsis;
 
     // no down arrow on multi selects
@@ -318,8 +318,8 @@ select {
         &,
         &:hover,
         &:focus {
-            background: $color-white;
-            padding: $field-padding;
+            background: lib.$color-white;
+            padding: forms.$field-padding;
         }
     }
 
@@ -328,49 +328,49 @@ select {
     }
 
     &:hover {
-        border-color: $field-border-color-hover;
-        background-image: $url-image-arrow-down-link-hover, $select-bg;
+        border-color: forms.$field-border-color-hover;
+        background-image: lib.$url-image-arrow-down-link-hover, forms.$select-bg;
     }
 
     &:focus {
-        border-color: $color-link;
-        background-image: $url-image-arrow-down-link, $select-bg;
-        box-shadow: $field-focus-ring;
+        border-color: lib.$color-link;
+        background-image: lib.$url-image-arrow-down-link, forms.$select-bg;
+        box-shadow: forms.$field-focus-ring;
         color: #222;
         outline: none;
 
         .mzp-t-dark & {
-            box-shadow: $field-focus-ring-dark;
+            box-shadow: forms.$field-focus-ring-dark;
         }
     }
 
     .mzp-is-error & {
-        border-color: $field-border-color-error;
+        border-color: forms.$field-border-color-error;
         box-shadow: none;
 
         &:hover {
-            border-color: $field-border-color-error-hover;
+            border-color: forms.$field-border-color-error-hover;
         }
 
         &:focus {
-            border-color: $form-red;
-            box-shadow: $field-focus-ring-error;
+            border-color: forms.$form-red;
+            box-shadow: forms.$field-focus-ring-error;
         }
     }
 
     &:disabled,
     &[aria-disabled=true] {
         background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'),
-                          $select-bg-disabled;
-        border-color: $color-marketing-gray-30;
-        color: $color-marketing-gray-70;
+                          forms.$select-bg-disabled;
+        border-color: lib.$color-marketing-gray-30;
+        color: lib.$color-marketing-gray-70;
 
         &:hover {
-            border-color: $color-marketing-gray-30;
+            border-color: lib.$color-marketing-gray-30;
         }
 
         &:focus {
-            border-color: $color-marketing-gray-80;
+            border-color: lib.$color-marketing-gray-80;
         }
     }
 
@@ -397,7 +397,7 @@ legend {
 
 label {
     &.mzp-u-inline {
-        @include bidi(((padding, 0 $spacing-sm 0 0, 0 0 0 $spacing-sm),));
+        @include bidi(((padding, 0 lib.$spacing-sm 0 0, 0 0 0 lib.$spacing-sm),));
         display: inline;
     }
 }
@@ -406,11 +406,11 @@ label {
     @include form-info;
 
     .mzp-is-error & {
-        color: $form-red;
+        color: forms.$form-red;
     }
 
     .mzp-c-button + & {
-        margin-top: $spacing-sm * -1;
+        margin-top: lib.forms.$spacing-sm * -1;
     }
 }
 
@@ -420,14 +420,14 @@ label {
 
 .mzp-c-form-errors {
     @include white-links;
-    background-color: $form-red;
-    border-radius: $field-border-radius;
-    color: $color-white;
-    padding: $spacing-sm;
-    margin-bottom: $spacing-xl;
+    background-color: forms.$form-red;
+    border-radius: forms.$field-border-radius;
+    color: lib.$color-white;
+    padding: lib.$spacing-sm;
+    margin-bottom: lib.$spacing-xl;
 
     .mzp-c-form-header + & {
-        margin-top: $spacing-xl;
+        margin-top: lib.$spacing-xl;
     }
 
     :last-child {
@@ -435,13 +435,13 @@ label {
     }
 
     li {
-        margin-bottom: $label-v-spacing;
+        margin-bottom: forms.$label-v-spacing;
     }
 }
 
 .mzp-is-error {
     input[type='checkbox'],
     input[type='radio'] {
-        box-shadow: $field-focus-ring-error;
+        box-shadow: forms.$field-focus-ring-error;
     }
 }
