--- a/assets/sass/protocol/base/elements/_details.scss
+++ b/assets/sass/protocol/base/elements/_details.scss
@@ -2,23 +2,24 @@
 // License, v. 2.0. If a copy of the MPL was not distributed with this
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-@import '../../includes/lib';
-@import '../../includes/mixins/details';
+@use '../../includes/lib';
+// @import '../../includes/mixins/details';
 
 .mzp-c-details,
 details {
-    @include details;
+    @debug lib;
+    @include lib.details;
 }
 
 summary,
 details .is-summary button,
 .mzp-c-details .is-summary button {
-    @include summary;
+    @include lib.summary;
 }
 
 // Override styling the native element when the polyfill is applied (issue #658)
 summary.is-summary {
-    @include bidi(((padding-right, 0, padding-left, 0),));
+    @include lib.bidi(((padding-right, 0, padding-left, 0),));
 
     &:before {
         display: none;
@@ -28,7 +29,7 @@ summary.is-summary {
 details[open] summary:before,
 details .is-summary button[aria-expanded=true]:before,
 .mzp-c-details .is-summary button[aria-expanded=true]:before {
-    @include summary-open;
+    @include lib.summary-open;
 }
 
 summary::-webkit-details-marker {
