--- a/assets/sass/protocol/base/elements/_document.scss
+++ b/assets/sass/protocol/base/elements/_document.scss
@@ -2,7 +2,7 @@
 // License, v. 2.0. If a copy of the MPL was not distributed with this
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-@import '../../includes/lib';
+@use '../../includes/lib';
 
 
 html {
@@ -12,9 +12,9 @@ html {
 
 body {
     @include text-body-md;
-    background: get-theme('background-color');
-    color: get-theme('body-text-color');
-    font-family: get-theme('body-font-family');
+    background: lib.get-theme('background-color');
+    color: lib.get-theme('body-text-color');
+    font-family: lib.get-theme('body-font-family');
     line-height: type-scale('body-line-height');
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
@@ -22,5 +22,5 @@ body {
 
 // A few places use a class to hide elements. We should try to avoid that.
 .hidden {
-    @include hidden;
+    @include lib.hidden;
 }
