--- a/assets/sass/protocol/base/elements/_quotes.scss
+++ b/assets/sass/protocol/base/elements/_quotes.scss
@@ -2,22 +2,22 @@
 // License, v. 2.0. If a copy of the MPL was not distributed with this
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-@import '../../includes/lib';
+@use '../../includes/lib';
 
 blockquote {
-    @include bidi(((border-width, 0 0 0 5px, 0 5px 0 0),));
-    @include text-title-sm;
-    border-color: $color-marketing-gray-20;
+    @include lib.bidi(((border-width, 0 0 0 5px, 0 5px 0 0),));
+    @include lib.text-title-sm;
+    border-color: lib.$color-marketing-gray-20;
     border-style: solid;
-    color: get-theme('title-text-color');
-    font-family: get-theme('title-font-family');
+    color: lib.get-theme('title-text-color');
+    font-family: lib.get-theme('title-font-family');
     font-weight: bold;
-    margin: $spacing-lg auto;
-    padding: $spacing-sm $spacing-lg;
+    margin: lib.$spacing-lg auto;
+    padding: lib.$spacing-sm lib.$spacing-lg;
 
     cite {
-        @include text-title-xs;
-        color: get-theme('body-text-color-secondary');
+        @include lib.text-title-xs;
+        color: lib.get-theme('body-text-color-secondary');
 
         &:before {
             content: '— ';
