--- a/assets/sass/protocol/base/elements/_tables.scss
+++ b/assets/sass/protocol/base/elements/_tables.scss
@@ -2,7 +2,7 @@
 // License, v. 2.0. If a copy of the MPL was not distributed with this
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-@import '../../includes/lib';
+@use '../../includes/lib';
 
 
 // We so rarely use tables that it's best not to give them any
@@ -13,14 +13,14 @@
     border-spacing: 0;
 
     caption {
-        @include bidi(((text-align, left, right),));
+        @include lib.bidi(((text-align, left, right),));
         margin-bottom: .25em;
         width: 100%;
     }
 
     th,
     td {
-        @include bidi(((text-align, left, right),));
+        @include lib.bidi(((text-align, left, right),));
         border-top: 1px solid rgba(0, 0, 0, .2);
         padding: .5em 10px;
         text-align: left;
