--- a/assets/sass/protocol/components/forms/_choice.scss
+++ b/assets/sass/protocol/components/forms/_choice.scss
@@ -3,7 +3,7 @@
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 @import '../../includes/lib';
-@import '../../includes/forms/lib';
+@import '../../includes/forms';
 
 // I'm collectivly calling radio buttons and checkboxes "choices"
 
