--- a/assets/sass/protocol/components/forms/_set.scss
+++ b/assets/sass/protocol/components/forms/_set.scss
@@ -3,7 +3,7 @@
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 @import '../../includes/lib';
-@import '../../includes/forms/lib';
+@import '../../includes/forms';
 
 
 // a component to group multiple form fields or choices together
